Generate Images from Text Prompts

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -11389,6 +11389,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Generate Images from Text Prompts"
+      ],
+      "metadata": {
+        "id": "8Ca7iP3K3Sa9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Define a text prompt\n",
@@ -11438,6 +11447,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Save the Generated Image"
+      ],
+      "metadata": {
+        "id": "tBz_CQS33NYj"
+      }
     },
     {
       "cell_type": "code",
