--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOrBgWhgl+QC7L638psWWJT",
+      "authorship_tag": "ABX9TyPD5zqQM/Mc9Q2J1EXWWTKE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,6 +108,11 @@
       "cell_type": "markdown",
       "source": [
         "> The Falah/Alzheimer_MRI Disease Classification dataset is a valuable resource for researchers and health medicine applications. This dataset focuses on the classification of Alzheimer's disease based on MRI scans. The dataset consists of brain MRI images labeled into four categories:\n",
+        "\n",
+        "- '0': Mild_Demented\n",
+        "- '1': Moderate_Demented\n",
+        "- '2': Non_Demented\n",
+        "- '3': Very_Mild_Demented\n",
         "\n"
       ],
       "metadata": {
