--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMkgjuT3VMHk4c7gtC70nyk",
+      "authorship_tag": "ABX9TyOtx6xUJeYtrrjYD/W6Ga9t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -695,12 +695,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "Rme0Y8LqOWjq",
-        "outputId": "8aa9ac9b-c0f4-41da-f988-cb5a5b79cdec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
-        }
+        },
+        "id": "Rme0Y8LqOWjq",
+        "outputId": "8aa9ac9b-c0f4-41da-f988-cb5a5b79cdec"
       },
       "execution_count": 59,
       "outputs": [
@@ -735,6 +735,30 @@
       ],
       "metadata": {
         "id": "6bFJxzPSO2ol"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Steps to Fix:\n",
+        "- Apply Augmentation to Each Image:\n",
+        "\n",
+        "Ensure that each image is augmented and that the augmented images are stored.\n",
+        "\n",
+        "- Update Labels for Augmented Images:\n",
+        "\n",
+        "If you are creating new images through augmentation, ensure that the labels are correctly associated with the augmented images.\n",
+        "\n",
+        "- Count the Labels in the Augmented Dataset:\n",
+        "\n",
+        "Count the occurrences of each label in the augmented dataset.\n",
+        "\n",
+        "- Plot the Distribution:\n",
+        "\n",
+        "Visualize the distribution of labels in the augmented dataset."
+      ],
+      "metadata": {
+        "id": "LiDqEDg0PTJg"
       }
     }
   ]
