--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOtx6xUJeYtrrjYD/W6Ga9t",
+      "authorship_tag": "ABX9TyP9dWFpKvpji1gQKI53Phmi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -740,26 +740,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Steps to Fix:\n",
-        "- Apply Augmentation to Each Image:\n",
+        "### Steps:\n",
+        "- Define Augmentation Ratios:\n",
         "\n",
-        "Ensure that each image is augmented and that the augmented images are stored.\n",
+        "For each class, specify how many augmented images to generate per original image.\n",
         "\n",
-        "- Update Labels for Augmented Images:\n",
+        "- Apply Augmentation:\n",
         "\n",
-        "If you are creating new images through augmentation, ensure that the labels are correctly associated with the augmented images.\n",
+        "For each image in the dataset, generate the specified number of augmented images based on its class.\n",
         "\n",
-        "- Count the Labels in the Augmented Dataset:\n",
+        "- Collect Augmented Images and Labels:\n",
         "\n",
-        "Count the occurrences of each label in the augmented dataset.\n",
+        "Store the augmented images and their corresponding labels.\n",
         "\n",
-        "- Plot the Distribution:\n",
+        "- Visualize the Distribution:\n",
         "\n",
-        "Visualize the distribution of labels in the augmented dataset."
+        "Plot the distribution of labels in the augmented dataset."
       ],
       "metadata": {
         "id": "LiDqEDg0PTJg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5-cBopVzRcjM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
