--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPcLNBGJKcCBJ+7MRSG5YbF",
+      "authorship_tag": "ABX9TyO+JRL8QRM5pwYbVktcehWR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -894,8 +894,8 @@
         "import random\n",
         "\n",
         "# Combine original and augmented data\n",
-        "all_images = list(dataset['image']) + augmented_images  # Replace 'image' with the correct key\n",
-        "all_labels = list(dataset['label']) + augmented_labels  # Replace 'label' with the correct key\n",
+        "all_images = list(dataset['image']) + augmented_images\n",
+        "all_labels = list(dataset['label']) + augmented_labels\n",
         "\n",
         "# Separate images by class\n",
         "class_images = defaultdict(list)\n",
