--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO+JRL8QRM5pwYbVktcehWR",
+      "authorship_tag": "ABX9TyOcwiqKvkdYOUq5RJv9C/vb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -940,6 +940,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Implementing a Diffusion Model"
+      ],
+      "metadata": {
+        "id": "41evYVpRTjok"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Steps:\n",
+        "- Define the Diffusion Model:\n",
+        "\n",
+        "Use a diffusion model to learn meaningful representations of the input images.\n",
+        "\n",
+        "- Add a Classifier:\n",
+        "\n",
+        "Add a simple classifier (e.g., a fully connected layer) on top of the diffusion model to perform classification.\n",
+        "\n",
+        "- Train the Model:\n",
+        "\n",
+        "Train the diffusion model and classifier jointly."
+      ],
+      "metadata": {
+        "id": "fHRs6oPITqsV"
+      }
     }
   ]
 }
